# ai-sw-bridge

./: .flake8  .gitignore  .gitleaksignore  .pre-commit-config.yaml  CHANGELOG.md  CLA.md  CODESTYLE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  THIRD-PARTY-NOTICES.md  USAGE.md  mypy.ini  pyproject.toml  pyrightconfig.json  requirements.txt
.claude/: settings.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  license_lint.yml  release.yml  security.yml  upstream_drift.yml
_results/: W42_sheet_metal_fixture_flat.dxf  assembly_p1_partspec_real_pae.json  export_dxf_flat.json  import_geom.json  observe_selection.json  phase2_complete_pae.json  phase2_mates_pae.json  s1_build_spec.json  s1_relations_spec.json  section_props.json  sketch_relations.json
docs/: AGENTS.md  CAPABILITIES.md  CLASS_RELATION_MAP.md  CODEBASE_AUDIT_2026-06-26.md  DEFERRED.md  E2E_FRESH_USER_AUDIT_2026-06-30.md  HANDOFF_TEMPLATE.md  ONBOARDING.md  PUBLIC_API.md  README.md  ROADMAP.md  ROLES.md  SECURITY.md  addins_research.md  ai_driven_architecture_review.md  api_reference.json  api_reference.md  architecture.md  audit_s1_cli_mcp_parallelism.md  checkpoint_encryption_design.md  cli_stability.md  com_failure_modes.md  commercial_readiness_audit.md  decisions.md  deprecation_policy.md  extension_contract.md  glossary.md  go_public_readiness_2026-07-07.md  handoff_F1.md  human_gates_runbook.md  known_gotchas.md  known_limitations.md  lane_designs.md  launch_readiness_checklist.md  mcp_server_design.md  migration_to_v0.12.md  migration_to_v0.14.md  operator_experience_audit_2026-07-04.md  operator_guide.md  pending_gates.md  (+25 more)
docs/history/: a4_hygiene_runbook.md  deferred_dim_investigation.md  devops_pipeline_standby_state.md  refactor_proposal_sketch_handlers.md  session_2026-06-25_commercial_hardening.md  v1_0_commercialization_rfc.md  w0_route_c_handoff_directive.md  w0_w68_isolation_and_w58_directive.md  w62_glm_worker_prompts.md  w65_edge_flange_rework.md  w65_glm_worker_prompts.md  w65_round2_fixture_fixes.md  w68_wave4_worker_prompts.md
docs/i18n/: TRANSLATION_PROMPT.md
docs/industrial_intake/: AGENTS.md  README.md  workflow.md
examples/: README.md  s1b_conveyor_locals.txt
examples/chamfered_box/: README.md  golden.json  spec.json
examples/drilled_plate/: README.md  golden.json  spec.json
examples/drive_roller/: README.md  golden.json  spec.json
examples/end_condition_bosses/: README.md  spec.json
examples/end_condition_cuts/: README.md  spec.json
examples/filleted_box/: README.md  golden.json  spec.json  spec_parametric.json
examples/grooved_shaft/: README.md  golden.json  spec.json
examples/minimal_cylinder/: README.md  golden.json  spec.json
examples/minimal_cylinder_v2/: README.md  golden.json  spec.json
examples/mirrored_holes/: README.md  golden.json  spec.json
examples/motor_mount_plate/: README.md  golden.json  spec.json
examples/patterned_disc/: README.md  golden.json  spec.json
examples/patterned_plate/: README.md  golden.json  spec.json
examples/revolved_ring/: README.md  golden.json  spec.json
examples/side_face_bosses/: golden.json  spec.json
examples/sketch_3d_primitives/: spec.json
examples/sketch_primitives/: spec.json
examples/spring_end_cap/: golden.json  spec.json
examples/tension_bracket/: README.md  golden.json  spec.json
examples/up_to_surface_boss/: README.md  spec.json
installer/: README-first.txt  ai-sw-bridge.iss
spikes/: .gitignore  _probe_merge_effect.py  phase2_complete_pae.py  phase2_slice1_typelib_dump.py  phase2_slice4_pae.py  slice8b_assembly.SLDASM  slice8b_box_base.SLDPRT  slice8b_box_base_faces.json  slice8b_box_lid.json  slice8b_build_base.py  slice8b_capture_manifest.py  slice8b_pae.py  slice8b_probe_faces.py  spike_face_frame_axes_pae.py  spike_seat_death_recovery.py  spike_seat_recovery_ui.py  spike_semantic_edges_pae.py  spike_sketch_on_side_face_pae.py
spikes/phase0/: MMP_DEBUG_SESSION.md  README.md  REPORT.md  spike_a_extrude.py  spike_b_face_select.py  spike_c_bind_equation.py  spike_c_locals.txt  spike_d_add_dim.py  spike_e2_cut_args.py  spike_e3_sel_mark.py  spike_e4_typed_fm.py  spike_e5_extrude_as_cut.py  spike_e6_extrusion3.py  spike_e7_cut_27args.py  spike_e_cut.py  spike_f_close_pm.py  spike_g_pref_probe.py  spike_h_sendkeys.py  spike_h_window_probe.py  (+9 more)
tests/: conftest.py  test_addins.py  test_api_reference_dll_validated.py  test_assembly_arrays.py  test_assembly_edit.py  test_assembly_face_resolver.py  test_assembly_handlers.py  test_assembly_lifecycle.py  test_assembly_part_spec_resolver.py  test_assembly_schema.py  test_assembly_storage.py  test_batch_supervised.py  test_build_api_index.py  test_build_health_gate.py  test_build_installer.py  test_builder_save.py  test_bundle_bug_report.py  test_checkpoint_redact.py  test_chm_extract.py  test_cli_auto_retry.py  test_cli_build_save_format.py  test_cli_dry_run.py  test_cli_memory.py  test_cli_stability.py  test_client_api.py  test_config.py  test_coverage_gate.py  test_deprecations.py  test_descriptor_doc_coverage.py  test_descriptor_schema_equivalence.py  test_doc_coverage.py  test_doc_truth.py  test_drawing_multisheet.py  test_drawing_spec.py  test_dxf_bend_layers.py  test_example_roundtrip.py  test_export_metrics.py  test_export_urdf.py  test_extension_conformance.py  test_facade_surface.py  (+60 more)
tools/: _api_extract_input.json  build_api_index.py  build_installer.py  bundle_bug_report.py  check_upstream_drift.py  checkpoint_redact.py  chm_extract.py  clone_references.sh  coverage_baseline.json  coverage_gate.py  doc_coverage_gate.py  example_roundtrip.py  export_full_sw_api.ps1  export_metrics.py  feature_tree_diff.py  gen_api_markdown.py  gen_sw_types.py  license_lint.py  lint_specs.py  module_size_baseline.json  module_size_gate.py  pre_commit_hook.py  probe_mcp_tools.py  rag_eval.py  rag_eval_benchmark.json  regression_check.py  release_v1.5_v1.6.sh  remote_prune_plan.sh  spec_redact.py  sw_version_tag.py  two_stream_lint.py  verify_api_reference_against_dll.ps1  w0_feature_lane_gate.sh  w0_w58_merge_gate.sh
(+1074 files in other folders)
