[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sw-bridge"
version = "1.7.0"
description = "A semi-automated bridge that lets an AI assistant (Claude, ChatGPT, Codex, etc.) drive SOLIDWORKS through the COM API for design-guide tuning and parametric part creation."
readme = "README.md"
license = { text = "Proprietary — see LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "ai-sw-bridge contributors" }]
keywords = ["solidworks", "cad", "automation", "ai", "claude", "codex", "com", "pywin32"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Upper bounds guard a shipped product against breaking upstream majors
    # (CI exercises the latest within each range). numpy spans the 1.x/2.x ABI
    # line; sqlite-vec is young pre-1.0, so it is held to the 0.1.x series.
    "pywin32>=305,<400",
    "Pillow>=10.0,<12",
    "oletools>=0.60,<1",
    "jsonschema>=4.0,<5",
    "numpy>=1.24,<3",
    "sqlite-vec>=0.1,<0.2",
]

[project.optional-dependencies]
crypto = ["cryptography>=41.0"]
mcp = ["mcp>=1.0.0"]
# Extras needed only by the CI full-suite job. Adding them here (rather than
# to `dev`) lets local dev installs stay lean while CI collects every test
# that uses `pytest.importorskip("mcp", ...)` or `importorskip("keyring", ...)`.
ci = [
    "mcp>=1.0.0",
    "keyring>=25.0",
]
dev = [
    "pytest>=7",
    "pytest-cov",
    "pytest-asyncio>=1.0",
    "pytest-xdist>=3",
    "black==25.12.0",
    "flake8>=7",
    "mypy==2.1.0",
    "types-jsonschema",
    "pre-commit>=3",
    "sentence-transformers>=2.2",
    "import-linter>=2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "onboarding: quickstart smoke tests (no SW required)",
    "fault_injection: COM fault injection tests (run as separate CI job)",
    "solidworks_only: live-SW regression tests (require a running SOLIDWORKS session; run as separate CI job)",
    "destructive_sw: tests that kill the SW process (must run in isolation; SEH-crash risk in suite)",
    "mcp_lane_live: live MCP write-gate lane (real ComExecutor; run in the isolated MCP job, not per-PR)",
]

[tool.black]
# Pin target so local + CI matrix entries (3.10, 3.12, 3.14) all produce
# the same output. Without this pin, black 25.x auto-targets py315 on the
# CI runners and the older Python versions can't re-parse the result,
# leading to "would reformat" errors against files that ARE already
# formatted -- they were formatted for py315, the safety check needs them
# in py3.x-current syntax.
target-version = ["py310"]

[project.urls]
Homepage = "https://github.com/Thomas-Tai/ai-sw-bridge"
Issues = "https://github.com/Thomas-Tai/ai-sw-bridge/issues"
Repository = "https://github.com/Thomas-Tai/ai-sw-bridge.git"

[project.scripts]
ai-sw-probe      = "ai_sw_bridge.cli.probe:main"
ai-sw-observe    = "ai_sw_bridge.cli.observe:main"
ai-sw-mutate     = "ai_sw_bridge.cli.mutate:main"
ai-sw-batch      = "ai_sw_bridge.cli.batch:main"
ai-sw-assembly   = "ai_sw_bridge.cli.assembly:main"
ai-sw-drawing    = "ai_sw_bridge.cli.drawing:main"
ai-sw-properties     = "ai_sw_bridge.cli.properties:main"
ai-sw-configurations = "ai_sw_bridge.cli.configurations:main"
ai-sw-sketch-relations = "ai_sw_bridge.cli.sketch_relations:main"
ai-sw-sketch-edit      = "ai_sw_bridge.cli.sketch_edit:main"
ai-sw-codegen    = "ai_sw_bridge.cli.codegen:main"
ai-sw-build      = "ai_sw_bridge.cli.build:main"
ai-sw-history    = "ai_sw_bridge.cli.history:main"
ai-sw-apidoc     = "ai_sw_bridge.cli.apidoc:main"
ai-sw-memory     = "ai_sw_bridge.cli.memory:main"
ai-sw-checkpoint = "ai_sw_bridge.cli.checkpoint:main"
ai-sw-import     = "ai_sw_bridge.cli.import:main"
ai-sw-export-dxf-flat = "ai_sw_bridge.cli.export_dxf_flat:main"
ai-sw-motion     = "ai_sw_bridge.cli.motion:main"
ai-sw-solver     = "ai_sw_bridge.cli.solver:main"
ai-sw-urdf       = "ai_sw_bridge.cli.urdf:main"
ai-sw-doctor     = "ai_sw_bridge.cli.doctor:main"
ai-sw-mcp        = "ai_sw_bridge.mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_sw_bridge = ["py.typed"]

# W4.4 — import-linter lane-boundary contracts.
# Layer order updated 2026-06-11: the original W4.4 list predated the
# assembly/drawing/configuration epochs and was never re-run (lint-imports
# was in neither CI nor the local gate), so it drifted from the shipped
# architecture. Post-epoch reality:
#   - mutate hosts the propose→dry-run→commit flows for feature_add AND
#     assembly/drawing/properties, so it orchestrates (sits above) spec,
#     drawing, and config; new feature_add kinds dispatch via features/.
#   - config.dispatch drives spec.builder (W36 multi-file variants).
#   - brep interrogation uses com.earlybind/sw_type_info (Wave-4 true-curve).
#
# cli and mcp are both entry points; the contract permits cli → mcp but
# not mcp → cli. In practice neither imports the other today — the MCP
# server delegates to the same lanes as the CLI, not to the CLI itself.
#
# import-linter layers: first entry is the HIGHEST layer.
# Higher layers may import from lower; lower may NOT import from higher.
[tool.importlinter]
root_packages = ["ai_sw_bridge"]

[[tool.importlinter.contracts]]
name = "Lane boundary layers"
type = "layers"
layers = [
    "ai_sw_bridge.cli",
    "ai_sw_bridge.mcp",
    "ai_sw_bridge.resilience",
    "ai_sw_bridge.mutate",
    "ai_sw_bridge.config",
    "ai_sw_bridge.spec",
    "ai_sw_bridge.parameterize",
    "ai_sw_bridge.observe",
    "ai_sw_bridge.export",
    "ai_sw_bridge.import_geom",
    "ai_sw_bridge.drawing",
    "ai_sw_bridge.features",
    "ai_sw_bridge.brep",
    "ai_sw_bridge.com",
    "ai_sw_bridge.checkpoint",
    "ai_sw_bridge.rag",
    "ai_sw_bridge.sw_com",
    "ai_sw_bridge.sw_types",
    "ai_sw_bridge.flags",
    "ai_sw_bridge.locals_io",
    "ai_sw_bridge.errors",
    "ai_sw_bridge.telemetry",
]
# v1.0 commercial boundary: the SolidWorksClient facade legitimately delegates
# to the mutate transaction layer (Facade -> Transaction -> Handlers). This is
# the intended GA architecture, not a layer leak — formally blessed here so the
# layers contract passes. (Was the v0.18 class-API "grace line" exception.)
# v1.6.0: the facade also composes the resilience envelope over the (injected)
# mutate batch runner for supervised-by-default batches (RES-1) — a lazy,
# function-local import; same facade-delegates-to-orchestration edge, blessed.
ignore_imports = [
    "ai_sw_bridge.client -> ai_sw_bridge.mutate",
    "ai_sw_bridge.client -> ai_sw_bridge.resilience",
]

# v1.7.0 — the cross-surface deprecation registry governs the four public
# surface classes by opaque string id and must import nothing it governs, so
# it can never form an import cycle. Pin the stdlib-only leaf property.
[[tool.importlinter.contracts]]
name = "deprecations registry is a stdlib-only leaf"
type = "forbidden"
source_modules = ["ai_sw_bridge.deprecations"]
forbidden_modules = [
    "ai_sw_bridge.cli",
    "ai_sw_bridge.mcp",
    "ai_sw_bridge.client",
    "ai_sw_bridge.spec",
    "ai_sw_bridge.mutate",
    "ai_sw_bridge.observe",
    "ai_sw_bridge.features",
]
